first Assigment Commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="left">
 
 
-        <div class="img"><img src="./bg.jpg" alt=""></div> <br><br><br><br>
+        <div class="img"><img src="./Profile.jpeg" alt=""></div> <br><br><br><br>
 
         <h3>Contact :</h3>
 
